Add performance test using class approach

--- a/index.html
+++ b/index.html
@@ -7,10 +7,18 @@
 <body>
     <section>
         <p>
-            How long does it take to add three new students to Gryffindor House: <br/>
+            How long does it take to add three new students to Gryffindor House (functional-approach): <br/>
             <span id="measuring-performance"></span>
         </p>
-
     </section>
+    <section>
+        <p>
+            How long does it take to add three new students to Gryffindor House (class-approach): <br/>
+            <span id="performance-class-approach"></span>
+        </p>
+    </section>
+    <script type="text/javascript" src="measuring-performance.js" ></script>
+    <script type="text/javascript" src="performance-class-approach.js" ></script>
+
 </body>
 </html>
