Add es6 iterator

--- a/index.html
+++ b/index.html
@@ -17,8 +17,15 @@
             <span id="performance-class-approach"></span>
         </p>
     </section>
+    <section>
+        <p>
+            Building an iterator for non-iterable objects: <br/>
+            <span id="es6-iterator"></span>
+        </p>
+    </section>
     <script type="text/javascript" src="measuring-performance.js" ></script>
     <script type="text/javascript" src="performance-class-approach.js" ></script>
+    <script type="text/javascript" src="es6-iterators.js" ></script>
 
 </body>
 </html>
