Add js directory and move all js files to it

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             <span id="es6-iterator"></span>
         </p>
     </section>
-    <script type="text/javascript" src="measuring-performance.js" ></script>
-    <script type="text/javascript" src="performance-class-approach.js" ></script>
-    <script type="text/javascript" src="es6-iterators.js" ></script>
+    <script type="text/javascript" src="js/measuring-performance.js" ></script>
+    <script type="text/javascript" src="js/performance-class-approach.js" ></script>
+    <script type="text/javascript" src="js/es6-iterators.js" ></script>
 
 </body>
 </html>
