Add checkio's even the last task

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <span id="es6-iterator"></span>
         </p>
     </section>
+    <section></section>
     <script type="text/javascript" src="js/measuring-performance.js" ></script>
     <script type="text/javascript" src="js/performance-class-approach.js" ></script>
     <script type="text/javascript" src="js/es6-iterators.js" ></script>
